#235 Using DatatypeConverter to generate the Base64 String. Class loading time reduced from 200ms to 10ms during local tests.
Wrote concurrent test case for CnameGenerator.